# ai-stock-analyst

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: daily-analysis.yml
.specify/memory/: constitution.md
ai_stock_analyst/: main.py
ai_stock_analyst/agents/: __init__.py  analyzer.py  anomaly.py  base.py  bear_researcher.py  bull_researcher.py  fundamental.py  liquidity_quality.py  macro_regime.py  news.py  portfolio.py  portfolio_analysis.py  recommendation.py  risk_manager.py  social.py  technical.py
ai_stock_analyst/broker/: __init__.py  ibkr.py
ai_stock_analyst/config/: settings.py
ai_stock_analyst/data/: __init__.py  features.py  fetcher.py  universe.py
ai_stock_analyst/database/: __init__.py  connection.py
ai_stock_analyst/llm/: bailian.py  gemini.py  router.py
ai_stock_analyst/notification/: __init__.py  base.py  dingtalk.py  manager.py  telegram.py  wechat.py
ai_stock_analyst/rss/: __init__.py  feed.py  models.py
docs/: README_EN.md
scripts/: backtest_strategy.py
specs/001-risk-aware-multi-agent-upgrade/: plan.md  spec.md  tasks.md
specs/002-beginner-friendly-dashboard-and-ibkr-onboarding/: plan.md  spec.md  tasks.md
specs/003-mobile-template-ibkr-cpapi-and-agent-upgrade/: plan.md  spec.md  tasks.md
specs/004-dingtalk-universe-discovery-and-ibkr-playbook/: plan.md  spec.md  tasks.md
specs/005-universe-news-ibkr-hosted-feasibility/: plan.md  spec.md  (+1 more)
sql/: init.sql
src/: __init__.py  main.py
tests/: test_agent_registry.py  test_backtest_script.py  test_dingtalk_markdown.py  test_discovery_scoring.py  test_ibkr_parsing.py  test_multi_agent_pipeline.py  test_recommendation_fallback.py  test_risk_gate.py  test_universe_coverage.py
(+22 files in other folders)
