[project]
name = "ai-stock-analyst"
version = "0.1.0"
description = "AI-powered stock analysis system with RSS news, social media sentiment, and multi-agent architecture"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    
    # Database (SQLite - built-in, no external dependency needed)
    
    # LLM APIs
    "openai>=1.12.0",
    "google-generativeai>=0.3.2",
    
    # Data Fetching
    "yfinance>=0.2.36",
    "requests>=2.31.0",
    "aiohttp>=3.9.3",
    
    # RSS Parsing
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "newspaper3k>=0.2.8",
    
    # NLP & Sentiment
    "nltk>=3.8.1",
    "textblob>=0.18.0",
    "vaderSentiment>=3.3.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "schedule>=1.2.1",
    "tenacity>=8.2.3",
    "httpx>=0.26.0",
    
    # Chart & Visualization
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.1",
]

[project.scripts]
stock-analyze = "src.main:main"
stock-web = "src.web.app:run"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
